<resources>
    <string name="app_name">KotlinInstagramFirebaseChat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginfragment">LoginFragment</string>
    <string name="register_text">Don\'t have an account? sing up!</string>
    <string name="name">Name</string>
    <string name="sign_up">sign up</string>
    <string name="chats">chats</string>
    <string name="login_empty_fields">Please fill all the fields</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">edit profile</string>
    <string name="sign_out">sign out</string>
    <string name="search">Search</string>
    <string name="type_a_message">Type a message</string>
    <string name="message">message</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="email">E-mail</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="bio_helper_text">This information will be displayed in your profile</string>
    <string name="share">Share</string>
    <string name="share_caption">Caption</string>
    <string name="share_photo_description">Share photo</string>
    <string name="post_image">Post image</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="online">online</string>
    <string name="home_placeholder">Your tape is empty. Subscribe to friends to track their posts or share your own!</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
</resources>
