<?xml version="1.0" encoding="utf-8"?>

<com.example.kotlininstagramfirebasechat.views.KeyBoardAvareScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInputSizes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/TextInputSizes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_sign_in_button"
            style="@style/ButtonSizes"
            android:text="@string/common_signin_button_text" />

        <TextView
            android:id="@+id/login_register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text" />

    </LinearLayout>

</com.example.kotlininstagramfirebasechat.views.KeyBoardAvareScrollView>
